--- a/client/package.json
+++ b/client/package.json
@@ -19,8 +19,10 @@
     "react-dom": "^19.1.1",
     "react-hook-form": "^7.63.0",
     "react-router-dom": "^7.9.3",
+    "react-tabulator": "^0.21.0",
     "rut.js": "^2.1.0",
-    "sweetalert2": "^11.23.0"
+    "sweetalert2": "^11.23.0",
+    "tabulator-tables": "^6.3.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.36.0",
